# End-To-End-Encryption-TEXTER

./: .gitignore  CODE_OF_CONDUCT.md  Client main.py  Client_distribution.py  Credentials.json  LOGO.icns  Procfile  README.md  Server main.py  Server.py  Socket.py  TEXTERE2EE.py  Texting GUI main.py  cache_managment_system.py  requirements-server.txt  requirements.txt  run_client.py  server.crt  server.key  text cache json.json
.github/workflows/: android_pkg.yml  main_TEXTERE2EE.yml  main_texter.yml  main_textere2ee.yml  windows_client.yml  x3dh-asynchronous-update_textere2ee.yml
AuthServer/: Cargo.toml
AuthServer/AuthServer/: Cargo.toml
AuthServer/AuthServer/src/: main.rs
AuthServer/src/: login_handler.rs  main.rs  register_handler.rs  testAuth.sh  types.rs
Client/: Client_distribution.py  x3dh.py
KivyClient/: buildozer.spec  main.py  reset_db.py  texter.kv
Legacy Server/: NewServer.py
NewServerCode/: Authenticator.py  NewServer.py  Socket.py  caching.py  secure_asgi_server.py
Server/: Authenticator.py  DirectoryManager.py  OneTimeKeyManager.py  Server.py  Socket.py  cache_managment_system.py  caching.py  secure_asgi_server.py  server.crt  server.key
Terminal/: Dashboard.py  startup.sh  stop.sh
TexterFlet/: main.py  pyproject.toml  requirements.txt
X3DH/: DB_connect.py  KeyStorage.py  StorageManager.py  x3dh_init.sql
X3DH-Async-Protocol/: DB_connect.py  KeyStorage.py  StorageManager.py  database.ini  utils.py  x3dh_init.sql
database/: DB_connect.py  DatabaseInitialization.py  KeyStorage.py  StorageManager.py  x3dh_init.sql
(+24 files in other folders)
