[package]
name = "texter_auth"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.24", features = ["tokio-comp"] }
uuid = { version = "1.7", features = ["v4"] }
jsonwebtoken = "9.2"
chrono = "0.4"
# Database (Assuming PostgreSQL. Change to "mysql" or "sqlite" if needed)
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
# Cryptography
argon2 = "0.5"
password-hash = "0.5"